--- a/front-tourist-activities/src/css/pages/home.css
+++ b/front-tourist-activities/src/css/pages/home.css
@@ -50,7 +50,7 @@
     max-width: 100vw;
     max-width: 100dvw;
     box-sizing: border-box;
-    padding: 1.5rem;
+    padding: 1.5rem 1rem;
 
 }
 
