--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -72,8 +72,9 @@
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
+    align-items: center;
     background-color: var(--white);
-    padding: 2rem;
+    padding: 1.4rem;
     border-radius: 16px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
     width: 100%;
@@ -99,6 +100,7 @@
 }
 
 .Profile-form {
+    width: 100%;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -143,6 +145,7 @@
 }
 
 .Profile-input {
+    font-size: 1rem;
     padding: 0.75rem 1rem;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -159,24 +162,24 @@
 .Profile-button {
     font-size: 1rem;
     padding: var(--btn-padding);
-    background-color: #69a9f8;
+    background-color: #5ca0f4;
     width: 100%;
     color: white;
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    border: 2px solid #69a9f8cc;
+    border: 2px solid #458ef5;
     box-shadow: 0 4px 12px #69a9f84d;
     transition: background-color 0.3s ease-in-out;
 }
 
 .Profile-button:hover {
-    background-color: #4f95f4;
+    background-color: #458ef5;
 }
 
 .Profile-button--cancel {
     background-color: #f48c8c;
-    border: 2px solid #f48c8ccc;
+    border: 2px solid #e97b7b;
     color: white;
     box-shadow: 0 4px 12px rgba(1244, 140, 140, 0.1);
 
@@ -210,8 +213,8 @@
 .Profile-button--pass {
     margin-top: 1rem;
     margin-bottom: 1rem;
-    background-color: #f4ad68;
-    border: 2px solid #f4ad68cc;
+    background-color: #f39b43;
+    border: 2px solid #f3882b;
     color: var(--white);
     width: 100%;
     box-shadow: 0 4px 12px rgba(244, 173, 104, 0.1);
@@ -220,13 +223,13 @@
 }
 
 .Profile-button--pass:hover {
-    background-color: #ef9a4f;
+    background-color: #f3882b;
 }
 
 .Profile-button--passConfirm {
-    margin-top: 1rem;
-    background-color: #5ac4ae;
-    border: 2px solid #5ac4afcc;
+    /* margin-top: 1rem; */
+    background-color: #41baa2;
+    border: 2px solid #19ad92;
     color: var(--white);
     width: 100%;
     box-shadow: 0 4px 12px rgba(190, 196, 174, 0.1);
@@ -236,17 +239,19 @@
 }
 
 .Profile-button--passConfirm:hover {
-    background-color: #43b8a2;
+    background-color: #19ad92;
 }
 
 .Profile-logout {
-    margin-top: 2rem;
+    margin-top: 1rem;
     background: none;
     border: none;
-    color: var(--color-text-t);
+    color: var(--color-text-p);
     cursor: pointer;
     text-align: center;
     font-size: 1rem;
+    transition: color 0.2s ease-out;
+    padding: 0.8rem 1.2rem;
 }
 
 .Profile-logout:hover {
@@ -287,6 +292,7 @@
     margin-bottom: 1rem;
     font-size: 1rem;
     color: var(--color-text-p);
+    width: 100%;
 }
 
 .Profile-name,
