btn volver atras en perfil, position

--- a/front-tourist-activities/src/css/components/header.css
+++ b/front-tourist-activities/src/css/components/header.css
@@ -46,10 +46,10 @@
 
 
 @media (min-width: 768px) {
-    .Header {
-        width: 80%;
-        justify-content: space-between;
-    }
 }
 
-@media (min-width: 1024px) {}
+@media (min-width: 1024px) {
+    .Header{
+        width: 80%;
+    }
+}
