--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -74,7 +74,7 @@
     justify-content: space-evenly;
     align-items: center;
     background-color: var(--white);
-    padding: 1.4rem;
+    padding: 1rem;
     border-radius: 16px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
     width: 100%;
@@ -82,11 +82,10 @@
     height: auto;
     min-height: 550px;
     /* overflow-y: auto; */
-    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+    transition: box-shadow 0.3s ease-in-out;
 }
 
 .Profile-card:hover {
-    transform: translateY(-2px);
     box-shadow: 0 20px 40px rgba(0, 0, 0, 0.15);
 }
 
@@ -107,15 +106,15 @@
 }
 
 .Profile-nav {
-    width: 100%;
+    width: fit-content;
     background: none;
     border: none;
     cursor: pointer;
     display: flex;
     justify-content: flex-start;
     position: absolute;
-    top: 40px;
-    left: 40px;
+    top: 4%;
+    left: 8%;
     z-index: 10;
 }
 
@@ -124,9 +123,9 @@
     border: 1.4px solid #ccc;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 12px;
     padding: 0.4rem;
-    width: 32px;
+    width: 38px;
     cursor: pointer;
     background-color: var(--white);
     transition: background-color 0.3s ease-in-out;
@@ -316,4 +315,21 @@
     display: flex;
     justify-content: center;
     gap: 10px;
+}
+
+@media (min-width: 768px) {
+    .Profile-nav {
+        top: 10%;
+        left: 10%;
+    }
+
+    .Profile-card {
+        padding: 1.2rem;
+    }
+}
+
+@media (min-width: 1024px) {
+    .Profile-card {
+        padding: 1.4rem;
+    }
 }
