--- a/front-tourist-activities/src/css/pages/profile.css
+++ b/front-tourist-activities/src/css/pages/profile.css
@@ -73,7 +73,7 @@
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
-    background-color: var(--white);
+    background-color: var(--color-bg-blueSoft);
     padding: 1rem;
     border-radius: 16px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.08);
