update padding en login title y register

--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -41,7 +41,7 @@
 }
 
 .Login-title {
-    padding: 12px;
+    padding: 20px 12px 12px 12px;
     font-size: 1.75rem;
     font-weight: bold;
     background: linear-gradient(90deg, #f26483, #faa536);
