--- a/front-tourist-activities/src/css/components/footer.css
+++ b/front-tourist-activities/src/css/components/footer.css
@@ -1,47 +1,44 @@
 /* FOOTER */
 
 .Footer {
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    z-index: 2;
-    display: flex;
-    border-radius: 50px 50px 0 0;
-    justify-content: space-around;
-    align-items: center;
-    flex-direction: column;
-    height: 10vh;
-    /* color entre los dos colores linear gradient del fondo principal */
-    background-color: #fbfdfd;
-
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  display: flex;
+  border-radius: 50px 50px 0 0;
+  justify-content: space-around;
+  align-items: center;
+  flex-direction: column;
+  height: 10vh;
+  /* color entre los dos colores linear gradient del fondo principal */
+  background-color: #f3c1a5;
 }
 
 .Footer-nav {
-    position: relative;
-    display: flex;
-    width: 100%;
-    justify-content: center;
+  position: relative;
+  display: flex;
+  width: 100%;
+  justify-content: center;
 }
 
 .Footer-ul {
-    display: flex;
-    gap: 20px;
-    width: 100%;
-    justify-content: space-around;
+  display: flex;
+  gap: 20px;
+  width: 100%;
+  justify-content: space-around;
 }
 
 .Footer-link {
-    text-decoration: none;
-    color: black;
-    opacity: 0.6;
-    transition: opacity 0.5s ease-in-out;
+  text-decoration: none;
+  color: black;
+  opacity: 0.6;
+  transition: opacity 0.5s ease-in-out;
 }
 
-
 .Footer-link.active {
-    opacity: 1;
-
+  opacity: 1;
 }
 
 /* .Footer-link.hover {
@@ -50,74 +47,72 @@
 } */
 
 .Footer-imgLink {
-    width: 25px;
+  width: 25px;
 }
 
 .Footer-divBtn {
-    color: white;
-    position: absolute;
-    top: -10px;
-    left: 50%;
-    padding: 20px;
-    background: linear-gradient(135deg, #e86ede, #efbff0);
-    border-radius: 50%;
-    width: 60px;
-    height: 60px;
-    transform: translate(-50%, -50%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    box-shadow: 0 10px 8px rgba(121, 83, 183, 0.5);
-    transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
+  position: absolute;
+  top: -10px;
+  left: 50%;
+  padding: 20px;
+  background: #ffeaea;
+  border-radius: 50%;
+  width: 60px;
+  height: 60px;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  box-shadow: 0 4px 8px #f9e2cc;
+  transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
 .Footer-divBtn:hover {
-    box-shadow: 0 12px 16px rgba(121, 83, 183, 0.6);
-    transform: translate(-50%, -55%) scale(1.05);
-
+  box-shadow: 0 2px 4px #f9e2cc;
+  transform: translate(-50%, -55%) scale(1.05);
 }
 
-
-
 .Footer-divBtn:active {
-    transform: translate(-50%, -50%) scale(0.95);
+  transform: translate(-50%, -50%) scale(0.95);
 }
 
 /* MOTION con los DOTS */
 
 .Footer-li {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .Footer-dots {
-    position: absolute;
-    /* bottom -8px, se posiciona por debajo del relative a menos 8px */
-    bottom: -15px;
-    display: flex;
-    gap: 4px;
+  position: absolute;
+  /* bottom -8px, se posiciona por debajo del relative a menos 8px */
+  bottom: -15px;
+  display: flex;
+  gap: 4px;
 }
 
 .dot {
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    /* radial gradient define el gradient en circulos, circle que será un circulo, y 30 % 30% que empezará arriba la la izq */
-    background: radial-gradient(circle at 30% 30%, #edebea, #e81663);
-    animation: spin 3s linear infinite;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  /* radial gradient define el gradient en circulos, circle que será un circulo, y 30 % 30% que empezará arriba la la izq */
+  background: radial-gradient(circle at 30% 30%, #f96060, #f69d9d);
+  animation: spin 3s linear infinite;
 }
-
-
+.Add-symbol {
+  color: #550e03;
+  font-weight: 700;
+}
 /* keyframe para darle css a las bolitas del nav del footer */
 @keyframes spin {
-    0% {
-        transform: rotate(0deg);
-    }
+  0% {
+    transform: rotate(0deg);
+  }
 
-    100% {
-        transform: rotate(360deg);
-    }
+  100% {
+    transform: rotate(360deg);
+  }
 }
