--- a/front-tourist-activities/src/css/components/header.css
+++ b/front-tourist-activities/src/css/components/header.css
@@ -1,56 +1,56 @@
 /* HEADER */
 
 .Header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 10vh;
-    height: 10dvh;
-    align-items: center;
-    width: 90%;
-    margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10vh;
+  height: 10dvh;
+  align-items: center;
+  width: 90%;
+  margin-top: 20px;
 }
 
 .Header-title {
-    font-size: 32px;
-    font-weight: bold;
-    background: linear-gradient(90deg, #f26483, #faa536);
-    /* para que solo coja las letras */
-    -webkit-background-clip: text;
-    /* define solo el background q le pones el color */
-    background-clip: text;
-    /* estandar futuro */
-    color: transparent;
-    /* se le quita el color normal del texto */
-    pointer-events: none;
-    font-family: var(--font-logo);
+  font-size: 32px;
+  font-weight: bold;
+  background: linear-gradient(90deg, #f26483, #faa536);
+  /* para que solo coja las letras */
+  -webkit-background-clip: text;
+  /* define solo el background q le pones el color */
+  background-clip: text;
+  /* estandar futuro */
+  color: transparent;
+  /* se le quita el color normal del texto */
+  pointer-events: none;
+  font-family: var(--font-logo);
+  z-index: 2;
 }
 
 .bar {
-    width: 100%;
-    height: 4px;
-    background-color: black;
+  width: 100%;
+  height: 4px;
+  background-color: black;
 }
 
 .Nav-menu {
-    gap: 20px;
-    display: flex;
-    transition: transform 0.4s ease-out, opacity 0.3s ease-out;
-    transform: translateX(0);
-    opacity: 1;
+  gap: 20px;
+  display: flex;
+  transition: transform 0.4s ease-out, opacity 0.3s ease-out;
+  transform: translateX(0);
+  opacity: 1;
 }
 
 .Nav-perfil {
-    width: 26px;
-    height: auto;
+  width: 26px;
+  height: auto;
 }
-
 
 @media (min-width: 768px) {
 }
 
 @media (min-width: 1024px) {
-    .Header{
-        width: 80%;
-    }
+  .Header {
+    width: 80%;
+  }
 }
