--- a/front-tourist-activities/src/css/pages/policy.css
+++ b/front-tourist-activities/src/css/pages/policy.css
@@ -1,65 +1,64 @@
 .PoliticaPriv,
 .TerminosCondiciones {
-    min-height: 100vh; /* fallback */
-    min-height: 100dvh; /* para navs modernos (cambio valores por barra dinamica) */
-    background-color: var(--color-bg-blueSoft);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-
+  min-height: 100vh; /* fallback */
+  min-height: 100dvh; /* para navs modernos (cambio valores por barra dinamica) */
+  background-color: var(--color-bg);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
 }
 
 .PoliticaPriv-div,
 .TerminosCondiciones-div {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    min-height: 400px;
-    width: 90%;
-    padding: 0.6rem;
-    background-color: var(--white);
-    border-radius: 24px;
-    margin: 0 auto;
-    max-width: 600px;
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  min-height: 400px;
+  width: 90%;
+  padding: 0.6rem;
+  background-color: var(--white);
+  border-radius: 24px;
+  margin: 0 auto;
+  max-width: 600px;
+  box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
 }
-
 
 .PoliticaPriv-title,
 .TerminosCondiciones-title {
-    font-size: 1.8rem;
-    font-weight: 700;
-    color: #222;
-    margin-bottom: 1rem;
-    text-align: center;
-
+  font-size: 1.8rem;
+  font-weight: 700;
+  color: var(--color-text-p);
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .PoliticaPriv-text,
 .TerminosCondiciones-text {
-    font-size: 1rem;
-    color: #555;
-    line-height: 1.6;
+  font-size: 1rem;
+  color: var(--color-text-t);
+  line-height: 1.6;
 
-    margin-bottom: 1rem;
-    text-align: center;
+  margin-bottom: 1rem;
+  text-align: center;
 }
 
 .PoliticaPriv-link,
 .TerminosCondiciones-link {
-    padding: 1rem;
-    background-color: var(--white);
-    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.08);
-
-    border-radius: 24px;
-    font-size: 1.1rem;
-    font-weight: 600;
-    color: #555;
-    transition: scale 1s ease-in-out, color 1s ease-in-out;
+  padding: 1rem;
+  background-color: var(--box-activities);
+  box-shadow: 0 4px 2px var(--btn-bg-color-intense);
+  border: 2px solid var(--btn-bg-color-intense);
+  border-radius: 24px;
+  font-size: 1.1rem;
+  font-weight: 600;
+  color: #555;
+  transition: background-color 1s ease-in-out, transform 0.3s ease-in-out;
 }
 
 .PoliticaPriv-link:hover {
-    scale: 1.1;
-    color: rgb(71, 150, 199);
+  background-color: var(--btn-bg-color-intense);
+}
+.PoliticaPriv-link:focus {
+  transform: scale(0.8);
 }
