--- a/front-tourist-activities/src/css/components/footer.css
+++ b/front-tourist-activities/src/css/components/footer.css
@@ -55,7 +55,7 @@
   top: -10px;
   left: 50%;
   padding: 20px;
-  background: #ffeaea;
+  background: var(--color-bg);
   border-radius: 50%;
   width: 60px;
   height: 60px;
@@ -64,7 +64,8 @@
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  box-shadow: 0 4px 8px #f9e2cc;
+  border: 2px solid var(--color-text-intense);
+  box-shadow: 0 6px 4px var(--color-text-intense);
   transition: transform 0.5s ease-in-out, box-shadow 0.5s ease-in-out;
 }
 
@@ -73,7 +74,7 @@
   transform: translate(-50%, -55%) scale(1.05);
 }
 
-.Footer-divBtn:active {
+.Footer-divBtn:focus {
   transform: translate(-50%, -50%) scale(0.95);
 }
 
