--- a/front-tourist-activities/src/css/pages/login-register.css
+++ b/front-tourist-activities/src/css/pages/login-register.css
@@ -130,7 +130,8 @@
   font-size: 1rem;
   transition: background-color 0.6s ease-in-out;
   cursor: pointer;
-  border: 4px solid var(--grad-start);
+  box-shadow: 0 4px 2px var(--grad-start);
+  border: 2px solid var(--grad-start);
   background-color: var(--color-btn-login);
 }
 
